Add route /auth/facebooktoken to get/update user's facebook token
