# app/app.js
@@ -28,6 +28,7 @@ var userInfo = require(__base + 'app/route/v1/user/info');
 var authLogin = require(__base + 'app/route/v1/auth/login');
 var authToken = require(__base + 'app/route/v1/auth/token');
 var authRenew = require(__base + 'app/route/v1/auth/renew');
+var authFbToken = require(__base + 'app/route/v1/auth/facebookToken');
 
 app.use('/ping', ping);
 
@@ -39,6 +40,7 @@ app.use('/v1/user/friend', userFriend);
 app.use('/v1/auth/login', authLogin);
 app.use('/v1/auth/token', authToken);
 app.use('/v1/auth/renew', authRenew);
+app.use('/v1/auth/facebooktoken', authFbToken);
 
 // 404 error
 app.use(function(req, res, next) {
